# dbuild

./: LICENSE  Makefile  README.md  bootstrap.sh  dbuild-ci.sh  pyproject.toml
.github/workflows/: build.yml  daemonless-build.yaml
dbuild/: __init__.py  __main__.py  build.py  ci_run.py  ci_test.py  cli.py  config.py  detect.py  docs.py  init.py  labels.py  log.py  manifest.py  podman.py  prepare.py  push.py  sbom.py  screenshot.py  test.py  verify.py  version.py
dbuild/ci/: __init__.py  github.py  gitlab.py  local.py  woodpecker.py
dbuild/registry/: __init__.py  dockerhub.py  generic.py  ghcr.py
dbuild/templates/: Containerfile  README.j2  compose.yaml  config.yaml  healthz.sh  run.sh  template-pkg.j2  template-upstream.j2  woodpecker.yaml
tests/: conftest.py  test_build.py  test_ci.py  test_ci_run.py  test_ci_test.py  test_cli.py  test_config.py  test_detect.py  test_init.py  test_labels.py  test_log.py  test_manifest.py  test_podman.py  test_prepare.py  test_push.py  test_registry.py  test_sbom.py  test_test.py
